# curso-c-

./: .gitignore  README.md  SESIONES.md
ejemplos/arboles/binarios/: .gitignore  CMakeLists.txt  binarytree.h  main.cpp
ejemplos/arboles/binarios/test/: .gitignore  CMakeLists.txt  insert_test.cpp  push_test.cpp
ejemplos/archivos/: CMakeLists.txt  main.cpp
ejemplos/graph/simple/: CMakeLists.txt  Node.cpp  Node.h  main.cpp
ejemplos/listas/lista_doble/: .gitignore  CMakeLists.txt  main.cpp
ejemplos/listas/lista_simple/: .gitignore  CMakeLists.txt  main.cpp
ejemplos/listas/lista_simple/tests/: .gitignore  CMakeLists.txt  tests.cpp
ejemplos/oop/basic/: BasicOOP  CMakeLists.txt  Person.cpp  Person.h  main.cpp
ejemplos/oop/herencia/: CMakeLists.txt  Cuadrado.cpp  Cuadrado.h  main.cpp  polygon.cpp  polygon.h  regularpolygon.cpp  regularpolygon.h
ejemplos/oop/polimorfismo-animales/: CMakeLists.txt  main.cpp
ejemplos/oop/punto2d/: BasicOOP  CMakeLists.txt  Punto2d.cpp  Punto2d.h  main.cpp
ejemplos/oop/universidad/: CMakeLists.txt  course.cpp  course.h  main.cpp  person.cpp  person.h  student.cpp  student.h  teacher.cpp  teacher.h
ejemplos/oop/vector/: CMakeLists.txt  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  main.cpp
ejemplos/tests/: splitstring.cpp  splitstring.h
ejemplos/tests/tests/: CMakeLists.txt  splitstring_test  splitstring_test.cpp
ejemplos_clases/hola_mundo/: CMakeCache.txt.prev  CMakeLists.txt  cmake_install.cmake  hola_mundo  main.cpp
ejemplos_clases/hola_mundo/.qtc_clangd/: compile_commands.json
temario/datosstd/: string.md
(+20 files in other folders)
